# Story-Of-My-Life

./: .gitignore  Dockerfile  Dockerfile.dev  Makefile  README.md  SETUP.md  docker-compose.dev.yml  docker-compose.yml  init.md  pyproject.toml
frontend/: Dockerfile  Dockerfile.dev  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: ActivityFeed.jsx  ChangeSummary.jsx  ChatDrawer.jsx  ChatManager.jsx  ChatPanel.jsx  ConversationalChat.jsx  Dashboard.jsx  DevBanner.jsx  DeveloperSettings.jsx  DocumentBrowser.jsx  DocumentEditor.jsx  DocumentFilterBar.jsx  DocumentMini.jsx  DocumentTree.jsx  DocumentView.jsx  EntityDetail.jsx  EntityEditor.jsx  EntityList.jsx  GraphView.jsx  NodeDetail.jsx  OpenLoops.jsx  RelationshipDetail.jsx  RelationshipsBetweenEntities.jsx  SearchModal.jsx  Settings.jsx  Sidebar.jsx  TagInput.jsx  Timeline.jsx
scripts/: init_neo4j.py  rebuild_indices.py
src/soml/: __init__.py
src/soml/agents/: __init__.py
src/soml/core/: __init__.py  config.py  context.py  llm.py  types.py
src/soml/crew/: __init__.py  agents.py  crew.py  tasks.py
src/soml/interface/: __init__.py  api.py  cli.py  mcp_server.py  openclaw.py
src/soml/mcp/: __init__.py  clarification.py  proposals.py  resolution.py
src/soml/mcp/tools/: __init__.py  base.py  batch.py  document.py  embedding.py  employment.py  tag.py  (+7 more)
src/soml/storage/: __init__.py  audit.py  conversations.py  graph.py  markdown.py  registry.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_ingestion.py
tests/unit/: __init__.py  test_markdown.py  test_types.py
