[project]
name = "soml"
version = "0.1.0"
description = "Story of My Life - Personal temporal knowledge graph with memory and agency"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "SOML Team"}
]

dependencies = [
    # Core
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    
    # LLM
    "openai>=1.0",
    "anthropic>=0.18",
    
    # Agent Framework
    "crewai>=0.30",
    
    # Database
    "neo4j>=5.0",
    
    # NLP
    "dateparser>=1.2",
    "spacy>=3.7",
    
    # YAML/Markdown
    "pyyaml>=6.0",
    "python-frontmatter>=1.0",
    
    # CLI
    "typer>=0.9",
    "rich>=13.0",
    
    # Async
    "asyncio>=3.4.3",
    "aiofiles>=23.0",
    
    # MCP (Model Context Protocol)
    "websockets>=12.0",
    
    # API Server
    "fastapi>=0.109",
    "uvicorn>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "ruff>=0.2",
    "mypy>=1.8",
    "pre-commit>=3.0",
]

[project.scripts]
soml = "soml.interface.cli:app"
soml-mcp = "soml.interface.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/soml"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

